# filey

./: Cargo.toml  README.md
src/: cmd.rs  main.rs
tests/: cli.rs
